--- a/index.html
+++ b/index.html
@@ -13,22 +13,16 @@
     <base href="//getbootstrap.com/" target="_blank">
     <script src="//getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
     <title>JYTech - Boot your future in AI</title>
-
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/jumbotron/">
-
-    
-
-    
-
-<link href="//getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="//getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="//dotku.github.io/jytech/assets/images/logo.svg" sizes="32x32" type="image/png">
-<link rel="icon" href="//dotku.github.io/jytech/assets/images/logo.svg" sizes="16x16" type="image/png">
-<link rel="manifest" href="//getbootstrap.com/docs/5.3/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="//getbootstrap.com/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-<link rel="icon" href="//dotku.github.io/jytech/assets/images/logo.svg">
+    <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" href="//dotku.github.io/jytech/assets/images/logo.svg" sizes="32x32" type="image/png">
+    <link rel="icon" href="//dotku.github.io/jytech/assets/images/logo.svg" sizes="16x16" type="image/png">
+    <link rel="manifest" href="//getbootstrap.com/docs/5.3/assets/img/favicons/manifest.json">
+    <link rel="mask-icon" href="//getbootstrap.com/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
+    <link rel="icon" href="//dotku.github.io/jytech/assets/images/logo.svg">
     <script>window.lemonSqueezyAffiliateConfig = { store: "jytech-media" };</script> <script src="https://lmsqueezy.com/affiliate.js" defer></script>
 <meta name="theme-color" content="#712cf9">
 
