--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">JY Tech</h1>
-        <p class="col-md-8 fs-4">By leveraging the mordern AI ability, we boot up the industry need and the fill the gap between the market and the business goal.</p>
+        <p class="col-md-8 fs-4">our mission is to revolutionize the intersection of technology and commerce, delivering seamless digital experiences that drive growth, enhance consumer engagement, and streamline financial transactions.</p>
 
       </div>
     </div>
