--- a/index.html
+++ b/index.html
@@ -179,15 +179,15 @@
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
-          <h2>Change the background</h2>
-          <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+          <h2>Media Service</h2>
+          <p>Leveraging advanced analytics and creative strategies, we help brands tell their stories effectively, ensuring maximum reach and engagement across various digital platforms.</p>
 
         </div>
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-          <h2>Add borders</h2>
-          <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+          <h2>E-commerce</h2>
+          <p>We provide robust, user-friendly e-commerce solutions that streamline the buying process, enhance user experience, and boost online sales.</p>
         </div>
       </div>
     </div>
