--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
 
     <footer class="pt-3 mt-4 text-body-secondary border-top">
-      &copy; 2023
+      &copy; 2023 JYTech LLC, made in the USA.
     </footer>
   </div>
 </main>
