--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
       </a>
     </header>
 
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-      <div class="container-fluid text-bg-dark py-5">
+    <div class="p-5 mb-4 text-bg-dark rounded-3">
+      <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">JY Tech</h1>
         <p class="col-md-8 fs-4">our mission is to revolutionize the intersection of technology and commerce, delivering seamless digital experiences that drive growth, enhance consumer engagement, and streamline financial transactions.</p>
       </div>
@@ -177,7 +177,7 @@
 
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
-        <div class="h-100 p-5 bg-body-tertiary rounded-3">
+        <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>Media Service</h2>
           <p>Leveraging advanced analytics and creative strategies, we help brands tell their stories effectively, ensuring maximum reach and engagement across various digital platforms.</p>
         </div>
