--- a/index.html
+++ b/index.html
@@ -177,10 +177,12 @@
 
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
+        <a href="https://dotku.us/marketing/" target="_blank">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>Media Service</h2>
           <p>Leveraging advanced analytics and creative strategies, we help brands tell their stories effectively, ensuring maximum reach and engagement across various digital platforms.</p>
         </div>
+        </a>
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
