--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">JY Tech</h1>
         <p class="col-md-8 fs-4">our mission is to revolutionize the intersection of technology and commerce, delivering seamless digital experiences that drive growth, enhance consumer engagement, and streamline financial transactions.</p>
+        <p class="fs-4">Contact Us at ‪(415) 851-1937‬</p>
       </div>
     </div>
 
