--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </div>
 
     <div class="row align-items-md-stretch">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <a href="https://dotku.us/marketing/" target="_blank">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>Media Service</h2>
@@ -188,7 +188,15 @@
         </div>
         </a>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
+        <a href="https://dotku.us/marketing/" target="_blank">
+        <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+          <h2>Tech Service</h2>
+          <p>We provide tech solution to covers interanational business including AI, IoT, FinTech, EdTech and ect.</p>
+        </div>
+        </a>
+      </div>
+      <div class="col-md-4">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>E-commerce</h2>
           <p>We provide robust, user-friendly e-commerce solutions that streamline the buying process, enhance user experience, and boost online sales.</p>
