--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="https://dotku.us/marketing/" target="_blank">
+        <a href="https://dotku.us/tech/" target="_blank">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>Tech Service</h2>
           <p>We provide tech solution to covers interanational business including AI, IoT, FinTech, EdTech and ect.</p>
