--- a/index.html
+++ b/index.html
@@ -197,10 +197,12 @@
         </a>
       </div>
       <div class="col-md-4">
+        <a href="https://dkwholesale.us/" target="_blank">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>E-commerce</h2>
           <p>We provide robust, user-friendly e-commerce solutions that streamline the buying process, enhance user experience, and boost online sales.</p>
         </div>
+        </a>
       </div>
     </div>
 
